# Text-Compression-Huffman

./: .gitignore  CMakeLists.txt  README.md  alphabet.cpp  alphabet.h  bit_level.h  build.sh  encode_file.cpp  encode_file.h  main.cpp
src/: CMakeLists.txt  IO.cpp  IO.h  alphabet.cpp  alphabet.h  bit_level.h  encode_file.cpp  encode_file.h  file_decoder.cpp  file_decoder.h  file_encoder.cpp  file_encoder.h  input_parsing.cpp  input_parsing.h  main.cpp  node.cpp  node.h
test/: test.sh  test_s_flag.sh  test_t_flag.sh
test/testdata/: humanrights.txt  tree.hft
